moves 4844 classes to datatypes
Signed-off-by: Justin Florentine <justin+github@florentine.us>